--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -53,29 +53,29 @@ brew:
     name: derailed
     email: fernand@imhotep.io
   folder: Formula
-  homepage: https://popeye.dev
+  homepage: https://imhotep.io/popeye
   description: A Kubernetes Cluster sanitizer and linter.
   test: |
     system "popeye version"
 
-# # Snapcraft
-# snapcraft:
-#   name: popeye
-#   summary: A Kubernetes Cluster sanitizer and linter.
-#   description: |
-#     Popeye scans your Kubernetes clusters and reports potential resource issues.
-#   name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-#   publish: true
-#   replacements:
-#     amd64: 64-bit
-#     386: 32-bit
-#     darwin: macOS
-#     linux: Tux
-#     bit: Arm
-#     bitv6: Arm6
-#     bitv7: Arm7
-#   grade: stable
-#   confinement: strict
-#   apps:
-#     popeye:
-#       plugs: ["home", "network"]
+# Snapcraft
+snapcraft:
+  name: popeye
+  summary: A Kubernetes Cluster sanitizer and linter.
+  description: |
+    Popeye scans your Kubernetes clusters and reports potential resource issues.
+  name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  publish: true
+  replacements:
+    amd64: 64-bit
+    386: 32-bit
+    darwin: macOS
+    linux: Tux
+    bit: Arm
+    bitv6: Arm6
+    bitv7: Arm7
+  grade: stable
+  confinement: strict
+  apps:
+    popeye:
+      plugs: ["home", "network"]
