rework report formats + added res

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -75,7 +75,14 @@ snapcraft:
     bitv6: Arm6
     bitv7: Arm7
   grade: stable
-  confinement: strict
+  confinement: classic
   apps:
     popeye:
-      plugs: ["home", "network"]
+      plugs: ["home", "network", "personal-files"]
+  plugs:
+    personal-files:
+      read:
+      - $HOME/.k9s
+      - $HOME/.kube
+      write:
+      - $HOME/.k9s
