--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -74,8 +74,8 @@ snapcraft:
     bit: Arm
     bitv6: Arm6
     bitv7: Arm7
-  grade: stable
-  confinement: strict
+  grade: edge
+  confinement: devmode
   apps:
     popeye:
       plugs: ["home", "network", "personal-files"]
