--- a/k8s/popeye/cronjob.yml
+++ b/k8s/popeye/cronjob.yml
@@ -16,7 +16,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: popeye
-              image: derailed/popeye:v0.3.3
+              image: quay.io/derailed/popeye:v0.3.6
               imagePullPolicy: IfNotPresent
               command: ["/bin/popeye"]
               args:
