--- a/spinach.yml
+++ b/spinach.yml
@@ -8,41 +8,30 @@ popeye:
       over: 200
       under: 50
 
+  excludes:
+    cm:
+      - rx:blee*\.v
+    namespace:
+      - kube-public
+      - rx:kube
+      - rx:istio
+    node:
+      - n1
+    pod:
+      - rx:nginx
+      - rx:.*-telemetry
+    service:
+      - rx:*-dash
+
   # Node...
   node:
-    # Check nodes resource utilization in percent against these thresholds.
     limits:
       cpu:    90
       memory: 80
-    exclude:
-    - n1
-
-  # Namespace...
-  namespace:
-    # Excludes these namespaces from the scan.
-    exclude:
-      - rx:kube
-      - rx:istio
 
   # Pod...
   pod:
-    # Check container resource utilization in percent.
-    # Issues a lint warning if above these thresholds.
     limits:
       cpu:    80
       memory: 75
-    # Warn if more than 3 restarts.
-    restarts:
-      3
-    # Excludes these pods from the scan.
-    exclude:
-      # Regex matches any pod name that starts with nginx
-      - rx:nginx
-      # Regex matches any pod that contains -telemetry
-      - rx:.*-telemetry
-
-  # Service ...
-  service:
-    # Excludes these services from the scan.
-    exclude:
-      - dictionary
+    restarts: 3
