Improve message for code 302
It stated that containers are running as root, but actually they
just CAN run as root (not enforced by securityContext)

--- a/internal/report/assets/r1.yml
+++ b/internal/report/assets/r1.yml
@@ -28,4 +28,4 @@ popeye:
         message: '[POP-301] Connects to API Server? ServiceAccount token is mounted'
       - group: __root__
         level: 2
-        message: '[POP-302] Containers are running as root'
+        message: '[POP-302] Containers are possibly running as root'
