fix spelling issues

--- a/assets/codes.yml
+++ b/assets/codes.yml
@@ -1,78 +1,78 @@
 codes:
   # Container
   100:
-    message:  Untagged docker image in use
+    message: Untagged docker image in use
     severity: 3
   101:
-    message:  Image tagged `latest in use
+    message: Image tagged `latest in use
     severity: 2
   102:
-    message:  No probes defined
+    message: No probes defined
     severity: 2
   103:
-    message:  No liveness probe
+    message: No liveness probe
     severity: 2
   104:
-    message:  No readiness probe
+    message: No readiness probe
     severity: 2
   105:
-    message:  "%s probe uses a port#, prefer a named port"
+    message: "%s probe uses a port#, prefer a named port"
     severity: 1
   106:
-    message:  No resources defined
+    message: No resources defined
     severity: 2
   107:
-    message:  No resource limits defined
+    message: No resource limits defined
     severity: 2
   108:
-    message:  "Unamed port %d"
+    message: "Unnamed port %d"
     severity: 1
   109:
-    message:  CPU Current/Request (%s/%s) reached user %d%% threshold (%d%%)
+    message: CPU Current/Request (%s/%s) reached user %d%% threshold (%d%%)
     severity: 2
   110:
-    message:  Memory Current/Request (%s/%s) reached user %d%% threshold (%d%%)
+    message: Memory Current/Request (%s/%s) reached user %d%% threshold (%d%%)
     severity: 2
   111:
-    message:  CPU Current/Limit (%s/%s) reached user %d%% threshold (%d%%)
+    message: CPU Current/Limit (%s/%s) reached user %d%% threshold (%d%%)
     severity: 3
   112:
-    message:  Memory Current/Limit (%s/%s) reached user %d%% threshold (%d%%)
+    message: Memory Current/Limit (%s/%s) reached user %d%% threshold (%d%%)
     severity: 3
   # Pod
   200:
-    message:  Pod is terminating [%d/%d]
+    message: Pod is terminating [%d/%d]
     severity: 2
   201:
-    message:  Pod is terminating [%d/%d] %s
+    message: Pod is terminating [%d/%d] %s
     severity: 2
   202:
-    message:  Pod is waiting [%d/%d]
+    message: Pod is waiting [%d/%d]
     severity: 3
   203:
-    message:  Pod is waiting [%d/%d] %s
+    message: Pod is waiting [%d/%d] %s
     severity: 3
   204:
-    message:  Pod is not ready [%d/%d]
+    message: Pod is not ready [%d/%d]
     severity: 3
   205:
-    message:  Pod was restarted (%d) %s
+    message: Pod was restarted (%d) %s
     severity: 2
   206:
-    message:  No PodDisruptionBudget defined
+    message: No PodDisruptionBudget defined
     severity: 1
   207:
-    message:  Pod is in an unhappy phase (%s)
+    message: Pod is in an unhappy phase (%s)
     severity: 3
   # Security
   300:
-    message:  Using `default` ServiceAccount
+    message: Using `default` ServiceAccount
     severity: 2
   301:
-    message:  Connects to API Server? ServiceAccount token is mounted
+    message: Connects to API Server? ServiceAccount token is mounted
     severity: 2
   302:
-    message:  Containers are possibly running as root
+    message: Containers are possibly running as root
     severity: 2
   303:
     message: Do you mean it? ServiceAccount is automounting APIServer credentials
@@ -85,151 +85,150 @@ codes:
     severity: 3
   # General
   400:
-    message:  Used? Unable to locate resource reference
+    message: Used? Unable to locate resource reference
     severity: 1
   401:
-    message:  Key `%s` used? Unable to locate key reference
+    message: Key `%s` used? Unable to locate key reference
     severity: 1
   402:
     message: No metric-server detected %v
     severity: 1
   403:
-    message:  Deprecated %s API group `%s. Use `%s instead
+    message: Deprecated %s API group `%s. Use `%s instead
     severity: 2
   404:
-    message:  Deprecation check failed. %v
+    message: Deprecation check failed. %v
     severity: 1
   405:
-    message:  Is this a jurassic cluster? Might want to upgrade K8s a bit
+    message: Is this a jurassic cluster? Might want to upgrade K8s a bit
     severity: 2
   406:
-    message:  K8s version OK
+    message: K8s version OK
     severity: 0
   # Deployment + StatefulSet
   500:
-    message:  Zero scale detected
+    message: Zero scale detected
     severity: 2
   501:
-    message:  "Used? No available replicas found"
+    message: "Used? No available replicas found"
     severity: 2
   502:
-    message:  "ReplicaSet collisions detected (%d)"
+    message: "ReplicaSet collisions detected (%d)"
     severity: 3
   503:
-    message:  "At current load, CPU under allocated. Current:%s vs Requested:%s (%s)"
+    message: "At current load, CPU under allocated. Current:%s vs Requested:%s (%s)"
     severity: 2
   504:
-    message:  "At current load, CPU over allocated. Current:%s vs Requested:%s (%s)"
+    message: "At current load, CPU over allocated. Current:%s vs Requested:%s (%s)"
     severity: 2
   505:
-    message:  "At current load, Memory under allocated. Current:%s vs Requested:%s (%s)"
+    message: "At current load, Memory under allocated. Current:%s vs Requested:%s (%s)"
     severity: 2
   506:
-    message:  "At current load, Memory over allocated. Current:%s vs Requested:%s (%s)"
+    message: "At current load, Memory over allocated. Current:%s vs Requested:%s (%s)"
     severity: 2
   # HPA
   600:
-    message:  HPA %s references a Deployment %s which does not exist
+    message: HPA %s references a Deployment %s which does not exist
     severity: 3
   601:
-    message:  HPA %s references a StatefulSet %s which does not exist
+    message: HPA %s references a StatefulSet %s which does not exist
     severity: 3
   602:
-    message:  Replicas (%d/%d) at burst will match/exceed cluster CPU(%s) capacity by %s
+    message: Replicas (%d/%d) at burst will match/exceed cluster CPU(%s) capacity by %s
     severity: 2
   603:
-    message:  Replicas (%d/%d) at burst will match/exceed cluster memory(%s) capacity by %s
+    message: Replicas (%d/%d) at burst will match/exceed cluster memory(%s) capacity by %s
     severity: 2
   604:
-    message:  If ALL HPAs triggered, %s will match/exceed cluster CPU(%s) capacity by %s
+    message: If ALL HPAs triggered, %s will match/exceed cluster CPU(%s) capacity by %s
     severity: 2
   605:
-    message:  If ALL HPAs triggered, %s will match/exceed cluster memory(%s) capacity by %s
+    message: If ALL HPAs triggered, %s will match/exceed cluster memory(%s) capacity by %s
     severity: 2
   # Node
   700:
-    message:  Found taint `%s but no pod can tolerate
+    message: Found taint `%s but no pod can tolerate
     severity: 2
   701:
-    message:  Node is in an unknown condition
+    message: Node is in an unknown condition
     severity: 3
   702:
-    message:  Node is not in ready state
+    message: Node is not in ready state
     severity: 3
   703:
-    message:  Out of disk space
+    message: Out of disk space
     severity: 3
   704:
-    message:  Insuficient memory
+    message: Insuficient memory
     severity: 2
   705:
-    message:  Insuficient disk space
+    message: Insuficient disk space
     severity: 2
   706:
-    message:  Insuficient PIDS on Node
+    message: Insuficient PIDS on Node
     severity: 3
   707:
-    message:  No network configured on node
+    message: No network configured on node
     severity: 3
   708:
-    message:  No node metrics available
+    message: No node metrics available
     severity: 1
   709:
-    message:  CPU threshold (%d%%) reached %d%%
+    message: CPU threshold (%d%%) reached %d%%
     severity: 2
   710:
-    message:  Memory threshold (%d%%) reached %d%%
+    message: Memory threshold (%d%%) reached %d%%
     severity: 2
   # Namespace
   800:
-    message:  Namespace is inactive
+    message: Namespace is inactive
     severity: 3
   # PodDisruptionBudget
   900:
-    message:  Used? No pods match selector
+    message: Used? No pods match selector
     severity: 2
   901:
-    message:  MinAvailable (%d) is greater than the number of pods(%d) currently running
+    message: MinAvailable (%d) is greater than the number of pods(%d) currently running
     severity: 2
   1000:
-    message:  Available
+    message: Available
     severity: 1
   1001:
-    message:  Pending volume detected
+    message: Pending volume detected
     severity: 3
   1002:
-    message:  Lost volume detected
+    message: Lost volume detected
     severity: 3
   1003:
-    message:  Pending claim detected
+    message: Pending claim detected
     severity: 3
   1004:
-    message:  Lost claim detected
+    message: Lost claim detected
     severity: 3
   # Service
   1100:
-    message:  No pods match service selector
+    message: No pods match service selector
     severity: 3
   1101:
-    message:  Skip ports check. No explicit ports detected on pod %s
+    message: Skip ports check. No explicit ports detected on pod %s
     severity: 1
   1102:
-    message:  "Use of target port #%s for service port %s. Prefer named port"
+    message: "Use of target port #%s for service port %s. Prefer named port"
     severity: 1
   1103:
-    message:  Type Loadbalancer detected. Could be expensive
+    message: Type Loadbalancer detected. Could be expensive
     severity: 1
   1104:
-    message:  Do you mean it? Type NodePort detected
+    message: Do you mean it? Type NodePort detected
     severity: 1
   1105:
-    message:  No associated endpoints
+    message: No associated endpoints
     severity: 3
   # NetworkPolicies
   1200:
-    message:  No pods matches %s pod selector
+    message: No pods matches %s pod selector
     severity: 2
   1201:
-    message:  No namespaces matches %s namespace selector
+    message: No namespaces matches %s namespace selector
     severity: 2
-
