--- a/.golangci.yml
+++ b/.golangci.yml
@@ -87,20 +87,20 @@ linters-settings:
     check-shadowing: true
 
     # settings per analyzer
-    settings:
-      printf: # analyzer name, run `go tool vet help` to see all analyzers
-        funcs: # run `go tool vet help printf` to see available settings for `printf` analyzer
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
+    # settings:
+    #   printf: # analyzer name, run `go tool vet help` to see all analyzers
+    #     funcs: # run `go tool vet help printf` to see available settings for `printf` analyzer
+    #       - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
+    #       - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
+    #       - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
+    #       - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
 
     # enable or disable analyzers by name
     enable:
       - atomicalign
     enable-all: false
     disable:
-      - shadow
+      # - shadow
     disable-all: false
   golint:
     # minimal confidence for issues, default is 0.8
@@ -114,7 +114,7 @@ linters-settings:
     local-prefixes: github.com/org/project
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
-    min-complexity: 10
+    min-complexity: 15
   gocognit:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
     min-complexity: 20
@@ -262,7 +262,6 @@ issues:
         - funlen
         - goconst
         - gocognit
-        - scopelint
 
     # Exclude known linters from partially hard-vendored code,
     # which is impossible to exclude via "nolint" comments.
@@ -300,8 +299,7 @@ issues:
   # of integration: much better don't allow issues in new code.
   # Default is false.
   new: false
-
   # Show only new issues created after git revision `REV`
-  new-from-rev: REV
+  # new-from-rev: REV
   # Show only new issues created in git patch with set file path.
   # new-from-patch: path/to/patch/file
