--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,16 +21,17 @@ builds:
       - 7
     ldflags:
       - -s -w -X github.com/derailed/popeye/cmd.version={{.Version}} -X github.com/derailed/popeye/cmd.commit={{.Commit}} -X github.com/derailed/popeye/cmd.date={{.Date}}
-archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    bit: Arm
-    bitv6: Arm6
-    bitv7: Arm7
-    386: i386
-    amd64: x86_64
+archives:
+  - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+    replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      bit: Arm
+      bitv6: Arm6
+      bitv7: Arm7
+      386: i386
+      amd64: x86_64
 checksum:
   name_template: "checksums.txt"
 snapshot:
@@ -43,16 +44,16 @@ changelog:
       - "^test:"
 
 # Homebrew
-brew:
-  name: popeye
-  github:
-    owner: derailed
-    name: popeye-homebrew-tap
-  commit_author:
-    name: derailed
-    email: fernand@imhotep.io
-  folder: Formula
-  homepage: https://imhotep.io/popeye
-  description: A Kubernetes Cluster sanitizer and linter.
-  test: |
-    system "popeye version"
+brews:
+  - name: popeye
+    github:
+      owner: derailed
+      name: popeye-homebrew-tap
+    commit_author:
+      name: derailed
+      email: fernand@imhotep.io
+    folder: Formula
+    homepage: https://imhotep.io/popeye
+    description: A Kubernetes Cluster sanitizer and linter.
+    test: |
+      system "popeye version"
