--- a/spinach/spinach_eks.yml
+++ b/spinach/spinach_eks.yml
@@ -13,10 +13,10 @@ popeye:
       overPercUtilization: 50
   # Excludes define rules to exampt resources from sanitization
   excludes:
-    rbac.authorization.k8s.io/v1/clusterrolebinding:
+    rbac.authorization.k8s.io/v1/clusterrolebindings:
       - name: rx:system
       - name: rx:eks
-    rbac.authorization.k8s.io/v1/clusterrole:
+    rbac.authorization.k8s.io/v1/clusterroles:
       - name: rx:eks
         codes:
           - 400
@@ -38,31 +38,31 @@ popeye:
       - name: cluster-admin
         codes:
           - 400
-    rbac.authorization.k8s.io/v1/rolebinding:
+    rbac.authorization.k8s.io/v1/rolebindings:
       - name: rx:kube
-    rbac.authorization.k8s.io/v1/role:
+    rbac.authorization.k8s.io/v1/roles:
       - name: rx:kube
-    apps/v1/daemonset:
+    apps/v1/daemonsets:
       - name: rx:kube-system
-    apps/v1/deployment:
+    apps/v1/deployments:
       - name: rx:kube-system
-    apps/v1/replicaset:
+    apps/v1/replicasets:
       - name: rx:kube
-    networking.k8s.io/v1/networkpolicy:
+    networking.k8s.io/v1/networkpolicies:
       - name: rx:freddy
-    policy/v1beta1/podsecuritypolicy:
+    policy/v1beta1/podsecuritypolicies:
       - name: rx:eks
-    v1/configmap:
+    v1/configmaps:
       - name: rx:kube
-    v1/namespace:
+    v1/namespaces:
       - name: rx:kube
-    v1/pod:
+    v1/pods:
       - name: rx:kube
-    v1/serviceaccount:
+    v1/serviceaccounts:
       - name: rx:kube
-    v1/secret:
+    v1/secrets:
       - name: rx:kube
-    v1/service:
+    v1/services:
       - name: rx:kube
         codes:
           - 404
