--- a/spinach/spinach_metakube.yml
+++ b/spinach/spinach_metakube.yml
@@ -1,28 +1,28 @@
 popeye:
   excludes:
-    serviceaccount:
+    v1/serviceaccounts:
       # We don’t check the kube* service accounts - this is part of the platform
       - name: rx:^kube
       - name: default/default
         codes:
           - 400
-  
+
     # Exclude some codes for default services
-    service:
+    v1/services:
       # This service is of type NodePort, which is intentional (1104)
       - name: default/kubernetes
         codes:
-          - 1104 
-      
+          - 1104
+
       # The ports here are not named yet (1102)
       - name: kube-system/kube-dns
         codes:
-         - 1102
-      
+          - 1102
+
       # The port here is not named yet (1102)
       - name: kube-system/node-exporter
         codes:
-         - 1102
+          - 1102
 
       # We don’t want to check tiller, it’s only here for backwards compatibility to helm2
       - name: kube-system/tiller-deploy
@@ -31,67 +31,67 @@ popeye:
       - name: kube-system/metrics-server
 
     # Exclude Secrets in the system namespaces
-    secret:
+    v1/secrets:
       - name: rx:^kube
-      
+
       # The default token may be unused
       - name: rx:default/default-token
         codes:
           - 400
-    
+
     # RoleBindings for platform services can be excluded
-    rolebinding:
+    rbac.authorization.k8s.io/v1/rolebindings:
       - name: rx:^kube
       - name: rx:^default/system
       - name: default/machine-controller
 
     # Roles for platform services can be excluded
-    role:
+    rbac.authorization.k8s.io/v1/roles:
       - name: rx:^kube
       - name: rx:^default/system
       - name: default/machine-controller
 
     # ReplicaSets for platform services can be excluded
-    replicaset:
+    v1/replicasets:
       - name: rx:^kube
 
     # MetaKube provides you with some SysEleven PodSecurityPolicies that we don’t want to scan here
-    podsecuritypolicy:
+    policy/v1beta1/podsecuritypolicies:
       - name: rx:^syseleven
 
     # PodDisruptionBudgets for platform services can be excluded
-    poddisruptionbudget:
+    policy/v1beta1/poddisruptionbudgets:
       - name: kube-system/coredns
 
     # Pods for platform services can be excluded
-    pod:
+    v1/pods:
       - name: rx:^kube-system/
 
     # Nodes are platform services and can be excluded
-    node:
+    v1/nodes:
       - name: rx:.*
 
     # We don’t want to sanitize the default namespaces:
-    namespace:
-      - name: default 
-      - name: kube-node-lease 
+    v1/namespaces:
+      - name: default
+      - name: kube-node-lease
       - name: kube-public
       - name: kube-system
 
     # Deployments for platform services can be excluded
-    deployment:
+    apps/v1/deployments:
       - name: rx:^kube-system
 
     # Daemonsets for platform services can be excluded
-    daemonset:
+    apps/v1/daemonsets:
       - name: rx:^kube-system
 
     # ConfigMaps for platform services can be excluded
-    configmap:
+    v1/configmaps:
       - name: rx:^kube-system
       - name: kube-public/cluster-info
 
-    clusterrole:
+    rbac.authorization.k8s.io/v1/clusterroles:
       - name: rx:.*
         codes:
           - 400
