--- a/.dockerignore
+++ b/.dockerignore
@@ -2,5 +2,16 @@
 README.md
 /execs
 *_test.go
-k8s
 *.yml
+/krew
+/notes
+/junit
+/dist
+/change_logs
+/assets
+/.github
+/.idea
+/.vscode
+/aa_dead
+/k8s
+/k8s1
