--- a/assets/codes.yml
+++ b/assets/codes.yml
@@ -124,6 +124,9 @@ codes:
   506:
     message: "At current load, Memory over allocated. Current:%s vs Requested:%s (%s)"
     severity: 2
+  508:
+    message: All %d replicas on the same node. Consider inter-pod anti-affinity
+    severity: 2
   # HPA
   600:
     message: HPA %s references a Deployment %s which does not exist
