--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           go-version: 1.15.3
       - name: Git
-        run: apt-get update && apt-get install git -y
+        run: sudo apt-get update && apt-get install git -y
       - name: Path
         run: printenv PATH && ls -al /usr/local/bin/go
       - name: GoReleaser
