--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15.3
+          go-version: 1.16.3
       - name: Git
-        run: sudo apt-get update && apt-get install git -y
+        run: sudo apt-get update && sudo apt-get install git -y
       - name: Path
         run: printenv PATH && ls -al /usr/local/bin/go
       - name: GoReleaser
