Adds rule 113 which makes possible to add a list of allowed registries to pull images from. Otherwise, all images are allowed.

--- a/internal/issues/assets/codes.yml
+++ b/internal/issues/assets/codes.yml
@@ -39,6 +39,9 @@ codes:
   112:
     message: Memory Current/Limit (%s/%s) reached user %d%% threshold (%d%%)
     severity: 3
+  113:
+    message:  Container image %s is not hosted on an allowed docker registry
+    severity: 3
 
   # Pod
   200:
