--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Popeye Checks
+name: Popeye Tests
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ on:
     branches:
       - master
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-20.04
     steps:
       - name: Install Go
