--- a/internal/issues/assets/codes.yml
+++ b/internal/issues/assets/codes.yml
@@ -106,7 +106,7 @@ codes:
     message: Key "%s" used? Unable to locate key reference
     severity: 1
   402:
-    message: No metric-server detected %v
+    message: No metrics-server detected
     severity: 1
   403:
     message: Deprecated %s API group "%s". Use "%s" instead
