Disable windows and mac builds.
Copy /tmp from alpine.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,11 +12,11 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-      - darwin
-      - windows
+      # - darwin
+      # - windows
     goarch:
       - amd64
-      - arm
+      # - arm
       - arm64
     goarm:
       - "7"
