--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -89,6 +89,7 @@ dockers:
       - "--label=org.opencontainers.image.description=A Kubernetes cluster resource sanitizer"
       - "--platform=linux/arm64/v8"
     use: buildx
+    goarch: arm64
     dockerfile: Dockerfile
 
 docker_manifests:
